--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ streamlit-calendar==0.5.0
 streamlit-card==0.0.5
 streamlit-elements==0.1.0
 streamlit-wordcloud==0.1.0
-streamlit-antd-components==0.2.1
+streamlit-antd-components
