--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ streamlit-calendar==0.5.0
 streamlit-card==0.0.5
 streamlit-elements==0.1.0
 streamlit-wordcloud==0.1.0
-streamlit-antd-components
+streamlit-antd-components==0.2.4
 streamlit-lottie
