--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,6 @@
 [theme]
 base="light"
 primaryColor="#3993dd"
-backgroundColor="#f4ebe8"
+backgroundColor="#eaeaea"
+secondaryBackgroundColor="#7bb3fb"
 font="monospace"
