--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,6 @@ primaryColor="#3993dd"
 backgroundColor="#eaeaea"
 secondaryBackgroundColor="#7bb3fb"
 font="monospace"
+
+[server]
+maxUploadSize = 5
