Add streamlit_tags and google-generativeai to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ streamlit-searchbox
 streamlit-pills
 st-xatadb-connection
 streamlit-quill
+streamlit_tags
+google-generativeai
 bcrypt
 pygwalker
 mitosheet
