--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -19,9 +19,9 @@ lint:
   disabled:
     - ruff
     - git-diff-check
+    - black
   enabled:
     - isort@5.13.2
-    - black@23.12.1
     - bandit@1.7.6
     - markdownlint@0.37.0
     - prettier@3.1.0
